refactoring + first attempt to make colour game work from REST enpoint instead of CLI